fixed 99% of deprecations & AutoSprint.kt more safe